[package]
name = "synapse-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = { version = "0.4.19", features = ["serde"] }
derive_builder = "0.10.2"
http-types = "2.12.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
surf = "2.3.2"
thiserror = "1.0.30"
